# iris

./: .dockerignore  .gitignore  .gitlab-ci.yml  CODEOWNERS  Dockerfile  Makefile  Pipfile  README.md  config.py  lt.py  openapi.yml  pyproject.toml  settings.py  setup.py  wsgi.py
.github/workflows/: ci.yaml  prod_release.yaml
iris/: __init__.py  gunicorn.py  metrics.py  prometheus.py  server.py  settings.py
prometheus/: __init__.py  metrics.py
tests/: conftest.py  test_content.py  test_healthchecks.py  test_metrics.py
