[tool.poetry]
name = "iris"
version = "0.0.0"
description = "Image Proxy API"
authors = ["Bink DevOps <devops@bink.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
pillow = "^10.0.1"
azure-storage-blob = "^12.14.1"
prometheus-client = "^0.16.0"
gunicorn = "^20.1.0"
flask-cors = "^3.0.10"
pydantic = "^1.10.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.248"
isort = "^5.12.0"
xenon = "^0.9.0"
pytest = "^7.2.1"
mypy = "^1.0.1"
types-flask = "^1.1.6"
pytest-flask = "^1.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"
black = "^23.1.0"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
